# gamma

./: COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  main.rs
src/graph/: array_graph.rs  default_graph.rs  error.rs  graph.rs  hash_graph.rs  index_graph.rs  mod.rs  stable_graph.rs  weighted_graph.rs
src/matching/: blossom.rs  contract.rs  error.rs  forest.rs  greedy.rs  marker.rs  matching.rs  maximum_matching.rs  mod.rs  pairing.rs
src/selection/: components.rs  mod.rs
src/traversal/: breadth_first.rs  depth_first.rs  mod.rs  step.rs  to_adjacency.rs
tests/: integration_suite.rs
