[package]
name = "graphcore"
version = "0.1.1"
authors = ["The GraphCore Project Developers"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/metamolecular/graphcore"
description = """
Graph primitives and traversals for Rust.
"""

[dependencies]
indexmap = "1.3.1"